# himalaya-lib

./: .env.example  .gitignore  Cargo.toml  README.md
src/: app.rs  auth.rs  email.rs  event.rs  main.rs  main2.rs  ui.rs
src/backend/imap/: backend.rs  config.rs
